Overflow Fix 2

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -133,7 +133,8 @@ a:focus {
     box-shadow: none;
 }
 .artShort article div {
-    height: 250px;
+    height: 230px;
+    padding: 10px 0;
     flex-grow: 1;
     display: flex;
     flex-direction: column;
@@ -142,8 +143,8 @@ a:focus {
     overflow: hidden;
 }
 .artShort article div .title {
-    margin-top: -10px;
-    padding-top: 10px;
+    /*margin-top: -10px;
+    padding-top: 10px;*/
     font-size: 30px;
     flex-basis: 30px;
     height: 34px;
